--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -51,7 +51,7 @@
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             background: linear-gradient(
                 180deg,
-                rgba(0, 0, 0, 0.2) 0,
+                rgba(0, 0, 0, 0.6) 0,
                 rgba(0, 0, 0, 1)
             );
             bottom: -70px;
@@ -64,6 +64,7 @@
             font-size: 24px;
             font-weight: 500;
             line-height: 24px;
+			font-family:'La Belle Aurore';
         }
 
         .description {
@@ -72,6 +73,7 @@
             color: #fff;
             font-weight: 100;
             width: 70%;
+			font-family: cursive;
         }
 
         @media only screen and (max-width: 870px) {
